@@ -2,6 +2,7 @@ package snek;
 
 import javafx.animation.PathTransition;
 import javafx.application.Application;
+import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableListValue;
 import javafx.beans.value.ObservableValue;
@@ -11,6 +12,7 @@ import javafx.event.Event;
 import javafx.event.EventHandler;
 import javafx.event.EventType;
 import javafx.geometry.Bounds;
+import javafx.geometry.Insets;
 import javafx.geometry.Orientation;
 import javafx.geometry.Rectangle2D;
 import javafx.scene.Group;
@@ -20,17 +22,25 @@ import javafx.scene.control.Button;
 import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.SplitPane;
+import javafx.scene.image.Image;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
+import javafx.scene.paint.ImagePattern;
 import javafx.scene.shape.*;
 import javafx.scene.text.Font;
 import javafx.scene.text.Text;
 import javafx.stage.Screen;
 import javafx.stage.Stage;
 import javafx.util.Duration;
+import sun.security.krb5.internal.crypto.Des;
+
+import java.net.URL;
+import java.net.URLClassLoader;
 import java.util.Random;
 import java.util.Stack;
+import java.util.Timer;
+import java.util.TimerTask;
 
 public class PlayGame extends Application{
     private Label score;
@@ -74,6 +84,19 @@ public class PlayGame extends Application{
     private boolean alternateFallBoxes = true;
 
     private Snake snake;
+
+    private Path[] pathBoxes;
+    private Path[] alternatePathBoxes;
+
+    private PathTransition[] pathTransitionBoxes;
+    private PathTransition[] pathTransitionBoxesAlternate;
+    private PathTransition[] pathTransitionBalls;
+    private PathTransition[] pathTransitionBallsAlternate;
+    private PathTransition[] pathTransitionCoins;
+    private PathTransition[] pathTransitionWalls;
+
+    private PathTransition pathTransitionShield;
+    private PathTransition pathTransitionMagnet;
 
     final String IDLE_BUTTON_STYLE = "-fx-padding: 8 15 15 15;"+
             "-fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;"+
@@ -198,42 +221,48 @@ public class PlayGame extends Application{
             boxes[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-//                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    DestroyBlock blok = (DestroyBlock) boxes[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    DestroyBlock blok;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        blok = (DestroyBlock) boxes[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        blok = null;
+                    }
+
+                    if(ball == null || blok == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, blok);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
-                        if(blok.hit(snake.getLength())){
+                        boolean hit = blok.hit(snake.getLength());
 
+                        if(snake.isHasShield()){
                             snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            System.out.println("LALAL");
-                            boxes[index].getChildren().remove(0);
-                            boxes[index].getChildren().remove(1);
-//                            try {
-//                                Thread.sleep(2000);
-//                            } catch (InterruptedException e) {
-//                                e.printStackTrace();
-//                            }
-//                            //  boxes[index].getChildren().addAll(blok, text);
-//                            //
+                            boxes[index].getChildren().remove(0, 1);
+                            addFire(index, blok);
+                        }
+                        else if(hit && blok.getBoxValue() <= 5){
+                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
+//                            boxes[index].getChildren().remove(0, 1);
+                            addFire(index, blok);
+                        }
+                        else if(blok.getBoxValue() > 5 && !snake.isHasShield() && hit){
+                            pauseBoxes();
+
+                            snake.removeBalls(blok.getBoxValue(), gameGridPane);
+                            Text text = (Text) boxes[index].getChildren().get(1);
+                            text.setText(String.valueOf(blok.getBoxValue() - 5));
+                            blok.reduceValue(5);
                         }
                         else{
-                            score.setText("game over bithc");
-
                             try {
                                 main.start(window);
                             } catch (Exception e) {
                                 e.printStackTrace();
                             }
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
                         }
                     }
                 }
@@ -248,88 +277,118 @@ public class PlayGame extends Application{
             boxesAlternate[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-//                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    DestroyBlock blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    DestroyBlock blok;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        blok = null;
+                    }
+
+                    if(ball == null || blok == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, blok);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
-                        if(blok.hit(snake.getLength())){
+                        boolean hit = blok.hit(snake.getLength());
 
+                        if(snake.isHasShield()){
                             snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            System.out.println("LALAL");
-                            boxesAlternate[index].getChildren().remove(0);
-                            boxesAlternate[index].getChildren().remove(1);
-//                            try {
-//                                Thread.sleep(2000);
-//                            } catch (InterruptedException e) {
-//                                e.printStackTrace();
-//                            }
-//                            //  boxes[index].getChildren().addAll(blok, text);
-//                            //
+                            boxesAlternate[index].getChildren().remove(0, 1);
+                            addFireAlternate(index, blok);
+                        }
+                        else if(hit && blok.getBoxValue() <= 5){
+                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
+                            boxesAlternate[index].getChildren().remove(0, 1);
+                            addFireAlternate(index, blok);
+                        }
+                        else if(blok.getBoxValue() > 5 && hit){
+                            pauseBoxes();
+                            snake.removeBalls(blok.getBoxValue(), gameGridPane);
+                            Text text = (Text) boxesAlternate[index].getChildren().get(1);
+                            text.setText(String.valueOf(blok.getBoxValue() - 5));
+                            blok.reduceValue(5);
                         }
                         else{
-                            score.setText("game over bithc");
-
                             try {
                                 main.start(window);
                             } catch (Exception e) {
                                 e.printStackTrace();
                             }
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
                         }
                     }
                 }
             });
         }
-//        for(int x = 0; x<boxesAlternate.length; x++){
-//            final int index = x;
-//
-//            if(boxesAlternate[x] == null)
-//                continue;
-//
-//            boxesAlternate[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
-//                @Override
-//                public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-////                            System.out.println(newValue);
-//                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-//                    DestroyBlock blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
-////                            System.out.println(ball + " " + blok);
-//                    Shape intersect = Shape.intersect(ball, blok);
-//                    if (intersect.getBoundsInLocal().getWidth() != -1) {
-//                        if(blok.hit(snake.getLength())){
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-//                            System.out.println("LALAL");
-//                            boxesAlternate[index].getChildren().remove(0);
-//                            boxesAlternate[index].getChildren().remove(1);
-//                           // boxesAlternate[index].getChildren().addAll(blok, text);
-//                        }
-//                        else{
-////                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-////                            score.setText(Integer.toString(snake.getLength()));
-//                            Text text = (Text) boxesAlternate[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxesAlternate[index].getChildren().remove(0);
-//                            boxesAlternate[index].getChildren().remove(1);
-//                            boxesAlternate[index].getChildren().addAll(blok, text);
-//                        }
-//                    }
-//                }
-//            });
-//        }
+    }
 
+    private void addFireAlternate(int index, DestroyBlock blok){
+        Timer timer = new Timer();
+
+        try{
+            boxesAlternate[index].getChildren().remove(1);
+            boxesAlternate[index].getChildren().remove(0);
+        } catch (Exception e){
+
+        }
+
+        DestroyBlock rect = createBlok();
+        boxesAlternate[index].setBackground(new Background(new BackgroundFill(new ImagePattern(new Image(getClass().getClassLoader().getResource("littt.jpg").toString())), CornerRadii.EMPTY, Insets.EMPTY)));
+        rect.setFill(Color.TRANSPARENT);
+//        rect.setStyle("-fx-background-image: url(littt.png)");
+
+        TimerTask timerTask = new TimerTask() {
+            @Override
+            public void run() {
+                Platform.runLater(new Runnable() {
+                    @Override
+                    public void run() {
+                        boxesAlternate[index].setBackground(Background.EMPTY);
+                    }
+                });
+            }
+        };
+
+        timer.schedule(timerTask, 500);
+    }
+
+    private void addFire(int index, DestroyBlock blok){
+        Timer timer = new Timer();
+
+        try{
+            boxes[index].getChildren().remove(1);
+            boxes[index].getChildren().remove(0);
+        } catch (Exception e){
+
+        }
+
+        DestroyBlock rect = createBlok();
+        boxes[index].setBackground(new Background(new BackgroundFill(new ImagePattern(new Image(getClass().getClassLoader().getResource("littt.jpg").toString())), CornerRadii.EMPTY, Insets.EMPTY)));
+        rect.setFill(Color.TRANSPARENT);
+//        rect.setStyle("-fx-background-image: url(littt.png)");
+
+        TimerTask timerTask = new TimerTask() {
+            @Override
+            public void run() {
+                Platform.runLater(new Runnable() {
+                    @Override
+                    public void run() {
+                        boxes[index].setBackground(Background.EMPTY);
+                    }
+                });
+            }
+        };
+
+        timer.schedule(timerTask, 500);
     }
 
     private void boxesFall(){
-        Path [] pathBoxes = new Path[boxes.length];
+        pathBoxes = new Path[boxes.length];
+        pathTransitionBoxes = new PathTransition[boxes.length];
+
         boolean setNext = false;
         for(int i=0; i<pathBoxes.length; i++){
             if(boxes[i] == null)
@@ -339,11 +398,11 @@ public class PlayGame extends Application{
 
             pathBoxes[i].getElements().add(new MoveTo(boxes[i].getTranslateX() + boxWidth/2, boxes[i].getTranslateY()));
             pathBoxes[i].getElements().add(new LineTo(boxes[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBoxes[i]);
-            pathTransition.setNode(boxes[i]);
-            pathTransition.play();
+            pathTransitionBoxes[i] = new PathTransition();
+            pathTransitionBoxes[i].setDuration(Duration.millis(3000));
+            pathTransitionBoxes[i].setPath(pathBoxes[i]);
+            pathTransitionBoxes[i].setNode(boxes[i]);
+            pathTransitionBoxes[i].play();
             if(!setNext) {
                 setNext = true;
 //                pathTransition.setOnFinished(e -> nextCycle());
@@ -352,25 +411,105 @@ public class PlayGame extends Application{
 
         if(alternateFallBoxes){
             alternateFallBoxes = false;
-            Path [] pathBoxesAlternate = new Path[boxesAlternate.length];
+            alternatePathBoxes = new Path[boxesAlternate.length];
+            pathTransitionBoxesAlternate = new PathTransition[boxesAlternate.length];
 
-            for(int i=0; i<pathBoxesAlternate.length; i++){
+            for(int i=0; i<alternatePathBoxes.length; i++){
 
                 if(boxesAlternate[i] == null)
                     continue;
 
-                pathBoxesAlternate[i] = new Path();
+                alternatePathBoxes[i] = new Path();
 
-                pathBoxesAlternate[i].getElements().add(new MoveTo(boxesAlternate[i].getTranslateX() + boxWidth/2, boxesAlternate[i].getTranslateY()));
-                pathBoxesAlternate[i].getElements().add(new LineTo(boxesAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-                PathTransition pathTransition = new PathTransition();
-                pathTransition.setDuration(Duration.millis(3000));
-                pathTransition.setPath(pathBoxesAlternate[i]);
-                pathTransition.setNode(boxesAlternate[i]);
-                pathTransition.setDelay(new Duration(1500));
-                pathTransition.play();
+                alternatePathBoxes[i].getElements().add(new MoveTo(boxesAlternate[i].getTranslateX() + boxWidth/2, boxesAlternate[i].getTranslateY()));
+                alternatePathBoxes[i].getElements().add(new LineTo(boxesAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
+                pathTransitionBoxesAlternate[i] = new PathTransition();
+                pathTransitionBoxesAlternate[i].setDuration(Duration.millis(3000));
+                pathTransitionBoxesAlternate[i].setPath(alternatePathBoxes[i]);
+                pathTransitionBoxesAlternate[i].setNode(boxesAlternate[i]);
+                pathTransitionBoxesAlternate[i].setDelay(new Duration(1500));
+                pathTransitionBoxesAlternate[i].play();
             }
         }
+    }
+
+    private void pauseBoxes(){
+        Timer timer = new Timer();
+
+        for(int i=0; i<pathBoxes.length; i++){
+            if(pathTransitionBoxes[i] != null)
+                pathTransitionBoxes[i].pause();
+
+            if(pathTransitionBoxesAlternate[i] != null)
+                pathTransitionBoxesAlternate[i].pause();
+        }
+
+        for(int i=0; i<coins.length; i++){
+            if(pathTransitionCoins[i] != null)
+                pathTransitionCoins[i].pause();
+        }
+
+        for(int i=0; i<balls.length; i++){
+            if(pathTransitionBalls[i] != null)
+                pathTransitionBalls[i].pause();
+        }
+
+        for(int i=0; i<ballsAlternate.length; i++){
+            if(pathTransitionBallsAlternate[i] != null)
+                pathTransitionBallsAlternate[i].pause();
+        }
+
+        for(int i=0; i<walls.length; i++){
+            if(pathTransitionWalls[i] != null)
+                pathTransitionWalls[i].pause();
+        }
+
+        if(pathTransitionMagnet != null)
+            pathTransitionMagnet.pause();
+
+        if(pathTransitionShield != null)
+            pathTransitionShield.pause();
+
+        TimerTask task = new TimerTask()
+        {
+            public void run()
+            {
+                for(int i=0; i<pathBoxes.length; i++){
+                    if(pathTransitionBoxes[i] != null)
+                        pathTransitionBoxes[i].play();
+
+                    if(pathTransitionBoxesAlternate[i] != null)
+                        pathTransitionBoxesAlternate[i].play();
+                }
+
+                for(int i=0; i<coins.length; i++){
+                    if(pathTransitionCoins[i] != null)
+                        pathTransitionCoins[i].play();
+                }
+
+                for(int i=0; i<balls.length; i++){
+                    if(pathTransitionBalls[i] != null)
+                        pathTransitionBalls[i].play();
+                }
+
+                for(int i=0; i<ballsAlternate.length; i++){
+                    if(pathTransitionBallsAlternate[i] != null)
+                        pathTransitionBallsAlternate[i].play();
+                }
+
+                for(int i=0; i<walls.length; i++){
+                    if(pathTransitionWalls[i] != null)
+                        pathTransitionWalls[i].play();
+                }
+
+                if(pathTransitionMagnet != null)
+                    pathTransitionMagnet.play();
+
+                if(pathTransitionShield != null)
+                    pathTransitionShield.play();
+            }
+        };
+        timer.schedule(task, 1000);
     }
 
     private void createBalls(){
@@ -421,24 +560,24 @@ public class PlayGame extends Application{
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
 //                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    Ball boll = (Ball) balls[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    Ball boll;
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Ball) balls[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(ball == null || boll == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, boll);
+
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
                         snake.addBalls(boll.getValue(),gameGridPane);
-                        //if(boll.hit()){
-                        // boll.setFill(Color.TRANSPARENT);
-                        balls[index].getChildren().remove(0);
-                        balls[index].getChildren().remove(1);
-                        //}
-//                        else{
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
-//                        }
+                        balls[index].getChildren().remove(0, 1);
                     }
                 }
             });
@@ -453,8 +592,19 @@ public class PlayGame extends Application{
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
 //                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    Ball boll = (Ball) ballsAlternate[index].getChildren().get(0);
+                    Ball ball;
+                    Ball boll;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Ball) ballsAlternate[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(boll == null || ball == null)
+                        return;
 //                            System.out.println(ball + " " + blok);
                     Shape intersect = Shape.intersect(ball, boll);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
@@ -462,17 +612,8 @@ public class PlayGame extends Application{
                         snake.addBalls(boll.getValue(),gameGridPane);
 
                         //ballsAlternate[index].setStyle("-fx-background-color: #000000");
-                        ballsAlternate[index].getChildren().remove(0);
-                        ballsAlternate[index].getChildren().remove(1);
+                        ballsAlternate[index].getChildren().remove(0, 1);
 
-                        //}
-//                        else{
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
-//                        }
                     }
                 }
             });
@@ -482,6 +623,7 @@ public class PlayGame extends Application{
     private void ballsFall(){
         Path [] pathBalls = new Path[balls.length];
         Path [] pathBallsAlternate = new Path[balls.length];
+        pathTransitionBalls = new PathTransition[balls.length];
 
         Random rand = new Random();
 
@@ -493,30 +635,31 @@ public class PlayGame extends Application{
 
             pathBalls[i].getElements().add(new MoveTo(balls[i].getTranslateX() + boxWidth / 2, balls[i].getTranslateY()));
             pathBalls[i].getElements().add(new LineTo(balls[i].getTranslateX() + boxWidth / 2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBalls[i]);
-            pathTransition.setNode(balls[i]);
-            pathTransition.setDelay(new Duration(500 + rand.nextInt(500)));
-            pathTransition.play();
+            pathTransitionBalls[i] = new PathTransition();
+            pathTransitionBalls[i].setDuration(Duration.millis(3000));
+            pathTransitionBalls[i].setPath(pathBalls[i]);
+            pathTransitionBalls[i].setNode(balls[i]);
+            pathTransitionBalls[i].setDelay(new Duration(500 + rand.nextInt(500)));
+            pathTransitionBalls[i].play();
         }
 
         boolean setOnFinished = false;
         for(int i=0; i<ballsAlternate.length; i++){
             pathBallsAlternate[i] = new Path();
+            pathTransitionBallsAlternate = new PathTransition[ballsAlternate.length];
 
             pathBallsAlternate[i].getElements().add(new MoveTo(ballsAlternate[i].getTranslateX() + boxWidth/2, ballsAlternate[i].getTranslateY()));
             pathBallsAlternate[i].getElements().add(new LineTo(ballsAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBallsAlternate[i]);
-            pathTransition.setNode(ballsAlternate[i]);
-            pathTransition.setDelay(new Duration(2000));
+            pathTransitionBallsAlternate[i] = new PathTransition();
+            pathTransitionBallsAlternate[i].setDuration(Duration.millis(3000));
+            pathTransitionBallsAlternate[i].setPath(pathBallsAlternate[i]);
+            pathTransitionBallsAlternate[i].setNode(ballsAlternate[i]);
+            pathTransitionBallsAlternate[i].setDelay(new Duration(2000));
             if(!setOnFinished) {
                 setOnFinished = true;
-                pathTransition.setOnFinished(event -> nextCycle());
+                pathTransitionBallsAlternate[i].setOnFinished(event -> nextCycle());
             }
-            pathTransition.play();
+            pathTransitionBallsAlternate[i].play();
         }
     }
 
@@ -547,8 +690,20 @@ public class PlayGame extends Application{
             coins[i].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    Coin boll = (Coin) coins[index].getChildren().get(0);
+                    Ball ball;
+                    Coin boll;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Coin) coins[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(ball == null || boll == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, boll);
 
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
@@ -563,6 +718,7 @@ public class PlayGame extends Application{
 
     private void coinsFall(){
         Path [] pathCoins = new Path[numberOfCoins];
+        pathTransitionCoins = new PathTransition[numberOfCoins];
         Random rand = new Random();
 
         for(int i=0; i<pathCoins.length; i++){
@@ -571,12 +727,12 @@ public class PlayGame extends Application{
 
             pathCoins[i].getElements().add(new MoveTo(coins[i].getTranslateX() + boxWidth/2, coins[i].getTranslateY()));
             pathCoins[i].getElements().add(new LineTo(coins[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathCoins[i]);
-            pathTransition.setNode(coins[i]);
-            pathTransition.setDelay(new Duration(400 + rand.nextInt(500)));
-            pathTransition.play();
+            pathTransitionCoins[i] = new PathTransition();
+            pathTransitionCoins[i].setDuration(Duration.millis(3000));
+            pathTransitionCoins[i].setPath(pathCoins[i]);
+            pathTransitionCoins[i].setNode(coins[i]);
+            pathTransitionCoins[i].setDelay(new Duration(200 + rand.nextInt(500)));
+            pathTransitionCoins[i].play();
         }
     }
 
@@ -596,8 +752,19 @@ public class PlayGame extends Application{
         shield.boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
             @Override
             public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-                Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                Polygon poly = (Polygon) shield.getChildren().get(0);
+                Polygon poly;
+                Ball ball;
+                try{
+                    ball = (Ball) snake.getFirst().getChildren().get(0);
+                    poly = (Polygon) shield.getChildren().get(0);
+                } catch (Exception e){
+                    ball = null;
+                    poly = null;
+                }
+
+                if(ball == null || poly == null)
+                    return;
+
                 Shape intersect = Shape.intersect(ball, poly);
                 if (intersect.getBoundsInLocal().getWidth() != -1) {
                     System.out.println("LALAL");
@@ -610,16 +777,17 @@ public class PlayGame extends Application{
 
     private void shieldFall(){
         Path shieldPath = new Path();
+        pathTransitionShield = new PathTransition();
         Random rand = new Random();
 
         shieldPath.getElements().add(new MoveTo(shield.getTranslateX() + boxWidth/2, shield.getTranslateY()));
         shieldPath.getElements().add(new LineTo(shield.getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-        PathTransition pathTransition = new PathTransition();
-        pathTransition.setDuration(Duration.millis(3000));
-        pathTransition.setPath(shieldPath);
-        pathTransition.setNode(shield);
-        pathTransition.setDelay(new Duration(700 + rand.nextInt(600)));
-        pathTransition.play();
+
+        pathTransitionShield.setDuration(Duration.millis(3000));
+        pathTransitionShield.setPath(shieldPath);
+        pathTransitionShield.setNode(shield);
+        pathTransitionShield.setDelay(new Duration(700 + rand.nextInt(600)));
+        pathTransitionShield.play();
     }
 
     private void addMagnet(){
@@ -641,8 +809,18 @@ public class PlayGame extends Application{
         magnet.boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
             @Override
             public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-                Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                Text newMag = (Text) magnet.getChildren().get(0);
+                Ball ball;
+                Text newMag;
+                try{
+                    ball = (Ball) snake.getFirst().getChildren().get(0);
+                    newMag = (Text) magnet.getChildren().get(0);
+                } catch (Exception e){
+                    ball = null;
+                    newMag = null;
+                }
+
+                if(ball == null || newMag == null)
+                    return;
 
                 Shape intersect = Shape.intersect(ball, newMag);
                 if (intersect.getBoundsInLocal().getWidth() != -1) {
@@ -685,16 +863,17 @@ public class PlayGame extends Application{
 
     private void magnetFall(){
         Path magPath = new Path();
+        pathTransitionMagnet = new PathTransition();
         Random rand = new Random();
 
         magPath.getElements().add(new MoveTo(magnet.getTranslateX() + boxWidth/2, magnet.getTranslateY()));
         magPath.getElements().add(new LineTo(magnet.getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-        PathTransition pathTransition = new PathTransition();
-        pathTransition.setDuration(Duration.millis(3000));
-        pathTransition.setPath(magPath);
-        pathTransition.setNode(magnet);
-        pathTransition.setDelay(new Duration(700 + rand.nextInt(600)));
-        pathTransition.play();
+
+        pathTransitionMagnet.setDuration(Duration.millis(3000));
+        pathTransitionMagnet.setPath(magPath);
+        pathTransitionMagnet.setNode(magnet);
+        pathTransitionMagnet.setDelay(new Duration(700 + rand.nextInt(600)));
+        pathTransitionMagnet.play();
     }
 
     private void createWalls(){
@@ -720,7 +899,8 @@ public class PlayGame extends Application{
 
     private void wallsFall(){
         Path [] pathWalls = new Path[walls.length];
-//        boolean setNext = false;
+        pathTransitionWalls = new PathTransition[walls.length];
+
         for(int i=0; i<pathWalls.length; i++){
             if(walls[i] == null)
                 continue;
@@ -729,12 +909,11 @@ public class PlayGame extends Application{
 
             pathWalls[i].getElements().add(new MoveTo(walls[i].getTranslateX(), walls[i].getTranslateY()));
             pathWalls[i].getElements().add(new LineTo(walls[i].getTranslateX(), gamePaneHeight + (wallHeight+boxHeight+3*boxHeight/2)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathWalls[i]);
-            pathTransition.setNode(walls[i]);
-//            pathTransition.setDelay(new Duration(150));
-            pathTransition.play();
+            pathTransitionWalls[i] = new PathTransition();
+            pathTransitionWalls[i].setDuration(Duration.millis(3000));
+            pathTransitionWalls[i].setPath(pathWalls[i]);
+            pathTransitionWalls[i].setNode(walls[i]);
+            pathTransitionWalls[i].play();
         }
     }
 
